Added T-COM, Skytel, Vodaphone and several more as a carriers for SMS.
---- Changes since 1.400 ----
Email, SMS and SNMP messages sent by Webmin can be customized, with multiple message templates defined and a different one selected for each monitor.
---- Changes since 1.410 ----
The process check monitor can now be limited to a particular user.
---- Changes since 1.420 ----
Allow saving of remote Webmin monitors when the remote host is down.
Added a new monitor type for checking the expiry and validity of SSL certificates in a local file or on any SSL website.
---- Changes since 1.440 ----
Added an option to the FTP status monitor to make a TLS encrypted connection. Requires the Net::FTPSSL Perl module though.
---- Changes since 1.450 ----
Added a tooltip to status icons to show the hostname.
---- Changes since 1.470 ----
Corrected the domain for AT&T SMS emails.
Added a new monitor type for Dovecot.
Added an option to the SSH monitor type for a port number.
---- Changes since 1.490 ----
Added a new monitor type for detecting large directories.
Added a button to the main page for refreshing only selected monitors, thanks to Michael Mansour.
---- Changes since 1.500 ----
Added an option to the Disk Space monitor to alert based on percentage free, as an alternative to a threshold in bytes.
Put back the option to use Cingular as an SMS carrier.
---- Changes since 1.510 ----
The Check File or Directory monitor can now use a pattern like /tmp/* to check sizes for all files in a directory.
Added a monitor-level option to run a command if the monitor times out.
---- Changes since 1.520 ----
Enhanced the free memory monitor to be able to check virtual memory as well.
---- Changes since 1.530 ----
Update the SSL certificate monitor to check alternate names as well when looking for hostname mismatches.
---- Changes since 1.590 ----
Commands run when a monitor goes up or down can now access details of the monitor via environment variables starting with STATUS_